# latti-ai

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md
docs/en/: build-guide.md  (+2 more)
examples/: CMakeLists.txt  README.md  inference.cpp
examples/test_cifar10/: gen_mega_ag.py  train.py  train_vgg.py
examples/test_cifar10/model/: __init__.py
examples/test_imagenet/: gen_mega_ag.py  train.py  train_vgg.py
examples/test_imagenet/model/: __init__.py  mobilenetv2.py
examples/test_mnist/: gen_mega_ag.py  train.py  train_vgg.py
examples/test_mnist/model/: __init__.py
examples/vgg_demo/:  README.md  README.md
inference/: CMakeLists.txt
inference/data_structs/: feature.cpp  feature.h  feature0d.cpp  feature1d.cpp  feature2d.cpp
inference/fhe_layers/: CMakeLists.txt  avgpool2d_layer.cpp  block_col_major_ccmm.cpp  block_col_major_ccmm.h  block_col_major_cpmm.cpp  block_col_major_cpmm.h  block_col_major_transpose.cpp  block_col_major_transpose.h  conv1d_packed_layer.cpp  conv1d_packed_layer.h  conv2d_layer.cpp  dense_packed_layer.cpp  inverse_multiplexed_conv2d_layer.cpp  mult_scaler.cpp  multiplexed_conv1d_pack_layer.cpp  multiplexed_conv1d_pack_layer.h  multiplexed_conv2d_pack_layer.cpp  multiplexed_conv2d_pack_layer.h  multiplexed_conv2d_pack_layer_depthwise.cpp  par_block_col_major_ccmm.cpp  par_block_col_major_ccmm.h  par_block_col_major_cpmm.cpp  par_block_col_major_cpmm.h  par_block_col_major_transpose.cpp  par_block_col_major_transpose.h  poly_relu2d.cpp  poly_relu2d.h  poly_relu_base.cpp  poly_relu_base.h  reshape_layer.h  upsample_nearest_layer.cpp
inference/inference_task/: inference_process.cpp  inference_process.h
inference/interface/: CMakeLists.txt  gen_mega_ag.py  inference_client.cpp  inference_client.h  inference_interface.cpp  inference_interface.h  inference_server.cpp  inference_server.h
inference/model_generator/: deploy_cmds.py
inference/unittests/: test_fhe_layers_hetero.cpp  test_gen_layers.py  ut_util.cpp  ut_util.h
(+67 files in other folders)
