add_library(fhe_layers 
  conv2d_layer.cpp 
  upsample_layer.cpp
  upsample_nearest_layer.cpp
  inverse_multiplexed_conv2d_layer.cpp
  concat_layer.cpp
  conv2d_packed_layer.cpp 
  activation_layer.cpp 
  dense_packed_layer.cpp 
  reshape_layer.cpp
  add_layer.cpp
  conv2d_depthwise.cpp
  avgpool2d_layer.cpp
  multiplexed_conv2d_pack_layer.cpp
  multiplexed_conv2d_pack_layer_depthwise.cpp
  poly_relu2d.cpp
  mult_scaler.cpp
  conv1d_packed_layer.cpp
  multiplexed_conv1d_pack_layer.cpp
  block_col_major_ccmm.cpp
  block_col_major_cpmm.cpp
  block_col_major_transpose.cpp
  par_block_col_major_transpose.cpp
  par_block_col_major_ccmm.cpp
  par_block_col_major_cpmm.cpp
  ../data_structs/feature.cpp
  ../data_structs/feature1d.cpp
  ../data_structs/feature2d.cpp
  ../data_structs/feature0d.cpp
  ../util.cpp
)
target_include_directories(fhe_layers PUBLIC 
  ${CMAKE_SOURCE_DIR}/data_structs/
)
target_link_libraries(fhe_layers PUBLIC lattisense)
